fix edge image wrapping
git-svn-id: file:///mnt/media/backups/pokey/2011-03-05/svn/sheepserver/trunk@41 36b1bf71-1d55-412a-8d7b-506455af119f

--- a/screen.css
+++ b/screen.css
@@ -121,3 +121,7 @@ img.edgelast {
 #mainmenu li.first {
     border: none;
 }
+
+a {
+    white-space: nowrap;
+}
